# ts_logging_and_reporting

./: .gitignore  .pre-commit-config.yaml  .ts_pre_commit_config.yaml  Jenkinsfile  Jenkinsfile.conda  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  times-square.yaml
.github/workflows/: lint.yaml
conda/: meta.yaml
doc/: backend_diagram_notes.md  nightly-digest-fresh-start.org  observation_gaps.drawio  version_history.rst
doc/news/: DM-50732.feature.md  DM-50834.feature.md  DM-50894.feature.md  DM-50966.misc.1.md  DM-50966.misc.2.md  DM-50966.misc.md  OSW-1061.feature.rst  OSW-1166.feature.rst  OSW-1177.misc.rst  OSW-1178.misc.rst  OSW-1216.misc.rst  OSW-1219.misc.rst  OSW-1220.misc.1.rst  OSW-1220.misc.2.rst  OSW-1220.misc.rst  OSW-1230.misc.rst  OSW-1234.misc.rst  OSW-1257.misc.rst  OSW-1261.removal.rst  OSW-1279.feature.rst  OSW-1284.bugfix.rst  OSW-1437.misc.rst  OSW-1539.bugfix.rst  OSW-1539.perf.rst  OSW-1569.bugfix.rst  OSW-1687.misc.rst  OSW-1689.misc.rst  OSW-1695.removal.rst  OSW-1752.misc.rst  OSW-1763.misc.rst  OSW-1773.bugfix.rst  OSW-1876.misc.rst  OSW-1945.feature.rst  OSW-2058.misc.rst  OSW-2143.misc.rst  OSW-2187.perf.rst  OSW-490.misc.rst  OSW-500.feature.rst  OSW-501.misc.rst  OSW-508.removal.rst  (+32 more)
docker/: Dockerfile  startup.sh
docs/: backend_diagram_notes.md  nightly-digest-fresh-start.org  unified-time-log.org
notebooks_for_times_square/: logrep_proto_1.ipynb  logrep_proto_1.yaml  requirements.txt  scaffolding.org
notebooks_tsqr/: DeveloperOnly.ipynb  DeveloperOnly.yaml  ExposureDetail.ipynb  ExposureDetail.yaml  NightLog.ipynb  NightLog.yaml  README.md  SAVE_exposurelog.ipynb  TEMPLATE_logrep.HIDE_yaml  TEMPLATE_logrep.ipynb  TEMPLATE_logrep.yaml  dashboard.ipynb  efd.ipynb  exposurelog.ipynb  exposurelog.yaml  logrep_all_env.ipynb  logrep_proto_1.ipynb  logrep_proto_1.yaml  narrativelog.ipynb  narrativelog.yaml  scaffolding.org  sources_dashboard.ipynb  sutl.ipynb  testing_narrativelog.ipynb
notebooks_tsqr/consdb/: access_consdb.ipynb  access_consdb.yaml  assorted_plots.ipynb  assorted_plots.yaml  requirements.txt
python/web_app/: main.py
python/web_app/data/: exposures-lsstcam0413.ecsv  jira-tickets.json
python/web_app/services/: consdb_service.py  jira_service.py  narrativelog_service.py
tests/: _test_api_endpoints.py  _test_services.py  api_endpoints.py  conftest.py  test_adapters.py  test_all_sources.py  test_api_endpoints.py  test_consDB.py  test_jira.py  test_services.py  test_utils.py
(+37 files in other folders)
