[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_logging_and_reporting"
description = "Project-side Logging and Reporting"
license = { text = "GPL" }
classifiers = [ "Programming Language :: Python :: 3" ]
readme = "README.md"
dynamic = [ "version" ]
requires-python = ">3.11,<3.13"
dependencies = ["requests (>=2.32.3,<3.0.0)", "jupyterlab (>=4.4.2,<5.0.0)", "pandas (>=2.2.3,<3.0.0)", "matplotlib (>=3.10.3,<4.0.0)", "numpy (>=2.2.5,<3.0.0)", "pre-commit (>=4.2.0,<5.0.0)", "astroplan (>=0.10.1,<0.11.0)", "astropy (>=7.0.1,<8.0.0)", "bokeh (>=3.7.2,<4.0.0)", "fastapi[standard] (>=0.115.12,<0.116.0)", "pydantic (>=2.11.4,<3.0.0)"]

[project.urls]
documentation = "https://ts-logging_and_reporting.lsst.io"
Homepage = "https://ts-logging_and_reporting.lsst.io"
Source = "https://github.com/lsst-ts/ts_logging_and_reporting"
repository = "https://github.com/lsst-ts/ts_logging_and_reporting"

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[project.scripts]
run_logging_and_reporting = "lsst.ts.logging_and_reporting:run_logging_and_reporting"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]

test = [
]

[tool.poetry]
version = "0.1.0"
