[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_logging_and_reporting"
description = "Project-side Logging and Reporting"
license = { text = "GPL" }
classifiers = [ "Programming Language :: Python :: 3" ]
readme = "README.md"
dynamic = [ "version" ]

[project.urls]
documentation = "https://ts-logging_and_reporting.lsst.io"
Homepage = "https://ts-logging_and_reporting.lsst.io"
Source = "https://github.com/lsst-ts/ts_logging_and_reporting"
repository = "https://github.com/lsst-ts/ts_logging_and_reporting"

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[project.scripts]
run_logging_and_reporting = "lsst.ts.logging_and_reporting.run_logging_and_reporting:run_logging_and_reporting"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
